Polish repository structure, docs, templates, security and devops setup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="cursor-spotlight" id="cursor-spotlight" aria-hidden="true"></div>
     <div id="notification" class="notification hidden"></div>
+    <div id="global-loading" class="global-loading hidden" aria-hidden="true">Carregando...</div>
     <div class="mobile-overlay" id="mobile-overlay"></div>
 
     <section class="auth-shell" id="auth-shell">
